Closed Bug 974045 Opened 10 years ago Closed 10 years ago

don't store JS_CRASH_DIAGNOSTICS variables when we don't need to

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: froydnj, Unassigned)

Details

Attachments

(1 file)

Some compilers are intelligent about eliminating write-only variables.
Some are not.
Jan Hubicka from GCC pointed out that we don't use these variables if
JS_CRASH_DIAGNOSTICS is undefined.  Since that macro is indeed undefined for
non-nightly builds, this patch gives us a nice and easy 96K space win for
release builds.
Attachment #8377749 - Flags: review?(luke)
Comment on attachment 8377749 [details] [diff] [review]
don't store JS_CRASH_DIAGNOSTICS variables when we don't need to

Wow, nice.
Attachment #8377749 - Flags: review?(luke) → review+
https://hg.mozilla.org/mozilla-central/rev/fc7603eef263
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: