Bug 974045 - don't store JS_CRASH_DIAGNOSTICS variables when we don't need to; r=luke